# HyperPredict

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists_tests.txt  DEVELOPER.md  OPTIMIZATION_PROPOSALS.md  README.md  module.prop  update.json
.github/workflows/: build.yml  magisk.yml
backup/v1_orig/: migration_engine.h
backup/v2_complete/: migration_engine.h  migration_engine_v2.cpp  migration_engine_v2.h
build_test/: CMakeCache.txt  Makefile  hyperpredictd
docs/: 865_efficiency_optimization.md  CODE_LOGIC_SUMMARY.md  LOL_OPTIMIZATION.md  MAGISK_MODULE_SPEC.md  migration_optimization.md
include/: event_loop.h
include/cache/: lru_cache.h
include/core/: boot_calibrator.h  boot_calibrator.h.bak  event_loop.cpp  event_loop.h  frame_pacer.h  load_aware_pool.h  lockfree_queue.h  logger.h  parallel.h  parallel_compute.h  system_collector.h  task_decomposer.h  types.h  types.h.bak  version.h.in
include/device/: cluster_policy.h  core_binder.h  cpu_freq_manager.h  cpu_topology.h  cpu_topology.h.bak  energy_model.h  hardware.h  hardware_analyzer.h  migration_engine.h  migration_engine.h.bak  migration_engine_v2.h  parallel_migration.h  soc_database.h
include/kernel/: sysfs_writer.h
include/net/: web_server.h
include/predict/: fallback_manager.h  feature_extractor.h  parallel_predictor.h  predictor.h
include/sched/: policy_engine.h
ksuwebui/: README.md  app.js  index.html  styles.css  ws-test.html
scripts/: build.sh  build_taliored.sh  device_probe.sh  install_module.sh  package_module.sh  run_root.sh  service.sh  uninstall.sh  update_version.sh
src/: event_loop.cpp  main.cpp  main.cpp.bak
src/cache/: lru_cache.cpp
src/core/: boot_calibrator.cpp  boot_calibrator.cpp.bak  event_loop.cpp  event_loop.cpp.bak  frame_pacer.cpp  lockfree_queue.cpp  logger.cpp  system_collector.cpp
src/device/: core_binder.cpp  cpu_freq_manager.cpp  cpu_topology.cpp  energy_model.cpp  hardware_analyzer.cpp  migration_engine.cpp  migration_engine_v2.cpp  soc_database.cpp
src/kernel/: sysfs_writer.cpp  sysfs_writer.cpp.bak
src/net/: web_server.cpp
src/predict/: fallback_manager.cpp  fallback_manager.cpp.bak  feature_extractor.cpp  feature_extractor.cpp.bak  predictor.cpp  predictor.cpp.bak
src/sched/: policy_engine.cpp  policy_engine.cpp.bak
tests/: test_framework.cpp  test_framework.h  test_main.cpp
webroot/: README.md  app.js  index.html  styles.css  ws-test.html
webui-react/: GETTING_STARTED.md  PROJECT_STRUCTURE.md  README.md  build.sh  index.html  install.sh  package.json  vite.config.ts
webui-react/src/: App.tsx
webui-react/src/api/: index.ts
webui-react/src/components/: Config.tsx  Dashboard.tsx  Layout.tsx  Predictor.tsx  Scheduler.tsx
webui-react/src/hooks/: .trashed-1779564565-useWebSocket.ts
webui-react/src/types/: .trashed-1779564565-index.ts
